<resources>
    <string name="app_name">MusicPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_comment">说点什么吧</string>
    <string name="comment">精彩评论</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="community">社区</string>
    <string name="back">返回</string>
    <string name="publish_situation">发表动态</string>
    <string name="hint_publish">说点什么吧~</string>
    <string name="maohao">:</string>
    <string name="name_song">歌名</string>
    <string name="name_singer">歌手</string>
    <string name="publish_comment">发表评论</string>
    <string name="button">返回</string>
    <string name="lyric">黑暗之中漂浮我的期待\n平静脸孔映着缤纷色彩\n让人好不疼爱\n你可以随着我的步伐\n轻轻柔柔的踩\n将美丽的回忆慢慢重来</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>