<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.SongCommentFragment">
    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/tb_song_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_titleText="@string/comment"
        app:tb_leftImageResource="@drawable/back"
        />
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#DFDDDD">
        <com.xuexiang.xui.widget.imageview.RadiusImageView
            android:id="@+id/image_song"
            android:clickable="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/image_song"
            app:riv_border_color="@color/xui_config_color_gray_6"
            app:riv_border_width="1px"
            app:riv_is_circle="false"
            app:riv_selected_border_color="@color/xui_config_color_gray_4"
            app:riv_selected_border_width="1px"
            app:riv_selected_mask_color="@color/xui_config_color_gray_8"
            app:riv_corner_radius="8dp"
            android:layout_marginEnd="13dp"/>
        <TextView
            android:id="@+id/name_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_song"
            android:layout_toRightOf="@id/image_song"
            android:textSize="22dp"
            android:textColor="#000000"
            android:layout_marginTop="17dp"/>
        <TextView
            android:id="@+id/name_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_singer"
            android:textSize="18dp"
            android:layout_below="@+id/name_song"
            android:layout_toRightOf="@+id/image_song"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="18dp"
            android:textColor="#000000"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/comments_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>